--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <title>Intro Canvas 2D</title>
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Objetos 2D en Canvas</a>
+            </div>
+        </nav>
+    </header>
 
     <main class="container mt-3 d-flex flex-column shadow rounded-3 p-2">
         <div class="d-flex flex-row  mb-3 justify-content-center bd-highlight mb-3">
@@ -32,10 +38,14 @@
         <div class="d-flex flex-row bd-highlight mb-3 shadow-sm mb-2 border p-3 justify-content-around">
             <canvas class=" border shadow" id="canvasPath" width="150%" height="150%"></canvas>
         </div>
-        
+
     </main>
 
-
+    <footer class="footer mt-auto py-3 bg-dark fixed-bottom">
+        <div class="container">
+            <span class="text-muted">Todos los derechos reservados &copy; Zinedine Acosta, 2024</span>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
